fix: replace height with min to remove overflow

--- a/assets/styles/reset.scss
+++ b/assets/styles/reset.scss
@@ -10,8 +10,8 @@
 
 html,
 body {
-  height: 100%;
-  font-family: sans-serif;
+  min-height: 100%;
+  font-family: 'Poppins', sans-serif;
   line-height: 1;
   font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
